--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   </head>
 
   <body>
-    <div id="app"></div>
-    <h1 id="title">Monthly Global Land-Surface Temperatures</h1>
-    <h3 id="description">1753 - 2015: base temperature 8.66℃</h3>
-
+    <div id="app">
+      <h1 id="title">Monthly Global Land-Surface Temperatures</h1>
+      <h3 id="description">1753 - 2015: base temperature 8.66℃</h3>
+    </div>
     <svg></svg>
+
     <script src="src/index.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
